<resources>
    <string name="app_name">Time App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hint_word">Word...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="clear_all_data">Clear all data</string>
    <string name="activities">Activities</string>
    <string name="create_an_activity">Create an activity</string>
    <string name="activity_not_saved">Fields left empty, Activity not saved</string>
    <string name="label_activity_list">My Activities</string>
    <string name="label_create_activity">Create an activity</string>
    <string name="hint_activity_name">Activity name</string>
    <string name="button_create_activity">Create Activity</string>
    <string name="hello_blank_fragment">Blank fragment</string>
    <string name="timelog">Timelog</string>
    <string name="activity_not_set">No Activity</string>
    <string name="no_timeslots_found">No timeslots!</string>
    <string name="nav_activities_label">Activities</string>
    <string name="nav_timelog_label">Timelog</string>
    <string name="nav_home_label">Home</string>
    <string name="nav_statistics_label">Statistics</string>
    <string name="productive_activity">Productive Activity</string>
    <string name="neutral_activity">Neutral Activity</string>
    <string name="unproductive_activity">Unproductive Activity</string>
    <string name="productivity_neg_2">-2</string>
    <string name="productivity_neg_1">-1</string>
    <string name="productivity_zero">0</string>
    <string name="productivity_plus_1">+1</string>
    <string name="productivity_plus_2">+2</string>
    <string name="label_productivity_score">Productivity Score:</string>
    <string name="label_colour">Activity Colour:</string>
    <string name="activity_updated">Activity Updated</string>
    <string name="activity_created">Activity Created</string>
    <string name="activity_already_exists">Activity already exists!</string>
    <string name="nav_goals_label">Goals</string>
    <string name="first_time_setup">First Time Setup</string>
    <string name="setup_name">Your name:</string>
    <string name="timeslot_intervals">Timeslot Length</string>
    <string name="timeslot_length_15">15 minutes</string>
    <string name="timeslot_length_30">30 minutes</string>
    <string name="timeslot_length_60">60 minutes</string>
    <string name="timeslot_length_description">Your timeslot length is how much time each timeslot represents. Shorter intervals will result in a more detailed model, but will be more effort to log.
        <br /><br />A timeslot length of 60 minutes (24 timeslots per day) means you can log one activity every hour, whereas 15 minutes (96 timeslots per day) means you can log four activities per hour. 30 minutes is a good compromise.
        <br /><br />You cannot change this after you select one.</string>
    <string name="button_continue">Continue</string>
    <string name="name_hint">Name</string>
    <string name="label_comment">Comment</string>
    <string name="hint_comment">Additional info</string>
    <string name="label_select_activity">Select Activity</string>
    <string name="button_done">Done</string>
    <string name="stats_title">Activities By Hour</string>
</resources>