<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@drawable/icon_home"
        android:title="@string/nav_home_label"/>
    <item
        android:id="@+id/nav_statistics"
        android:enabled="true"
        android:icon="@drawable/icon_statistics"
        android:title="@string/nav_statistics_label"/>
    <item
        android:id="@+id/nav_timelog"
        android:enabled="true"
        android:icon="@drawable/icon_timelog"
        android:title="@string/nav_timelog_label"/>
    <item
        android:id="@+id/nav_activities"
        android:enabled="true"
        android:icon="@drawable/icon_activities"
        android:title="@string/nav_activities_label"/>
</menu>