<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".ui.Statistics.SetupActivity">


    <TextView
        android:id="@+id/text_name_prompt"
        style="@style/text_view_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/setup_name"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapSentences"
        android:hint="@string/name_hint"
        app:layout_constraintTop_toTopOf="@id/text_name_prompt"
        app:layout_constraintBottom_toBottomOf="@id/text_name_prompt"
        app:layout_constraintStart_toEndOf="@id/text_name_prompt"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_timeslot_intervals"
        style="@style/text_view_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/timeslot_intervals"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/text_name_prompt"
        app:layout_constraintStart_toStartOf="parent" />
    <RadioGroup
        android:layout_marginStart="10dp"
        android:id="@+id/radiogroup_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_timeslot_intervals">

        <RadioButton
            android:id="@+id/radio_button_60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeslot_length_60"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radio_button_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeslot_length_30"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radio_button_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeslot_length_15"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/radiogroup_interval"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="8dp"
        android:textStyle="italic"
        android:textSize="18sp"
        android:text="@string/timeslot_length_description"
        />

    <Button
        android:id="@+id/button_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_continue"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="completeSetup"/>


</androidx.constraintlayout.widget.ConstraintLayout>