<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:textSize="20sp"
        android:layout_marginVertical="5dp"
        android:paddingHorizontal="10dp"
        android:text="@string/label_comment"
        />

    <EditText
        android:id="@+id/edit_text_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_comment"
        android:inputType="text"
        />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_done"
        android:layout_marginHorizontal="10dp"
        android:onClick="editComment"
        />

</LinearLayout>